<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:text="@string/warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"/>
    <Button
        android:id="@+id/play_hint_button"
        android:text="@string/play_hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp" />
    <Button
        android:id="@+id/go_back_button"
        android:text="@string/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp" />
</LinearLayout>